<resources>
    <string name="image_instruction">Click on the cute poo-poo image to see the nappy</string>
    <string name="sides"> started at: %s | ended at: %s</string>
    <string name="breasfeed_duration">Duration: %s (L: %s, R: %s)</string>
    <string name="bottle_details">Duration: %s | Amount: %.2fml</string>
    <string name="meal_exist">A meal is already added at this time</string>
    <string name="cannot_delete">Could not delete this record</string>
    <string name="start_record">Start recording the duration</string>
    <string name="no_record">No record found</string>
    <string name="date_list">%s (today)</string>
    <string name="nappies">Dirty nappies</string>
    <string name="feedings">Meals</string>
    <string name="sleeps">Sleeps</string>
    <string name="activities">Activities</string>
    <string name="app_name">Night Night</string>
    <string name="setting">Settings</string>
    <string name="comming">Comming soon</string>
    <string name="feed">Feeding</string>
    <string name="nappy">Nappy</string>
    <string name="sleep">Sleep</string>
    <string name="activity">Activity</string>
    <string name="back">Back</string>
    <string name="baby_info">Baby Info</string>
    <string name="upload">Upload</string>
    <string name="remove">Remove</string>
    <string name="enter_name">Enter your baby name:</string>
    <string name="name_example">Gon Feeces</string>
    <string name="gender">Gender:</string>
    <string name="girl_icon">Girl Icon</string>
    <string name="boy_icon">Boy Icon</string>
    <string name="dob">Date of birth:</string>
    <string name="save">Save record</string>
    <string name="date_example">16/11/1997</string>
    <string name="edit">Edit</string>
    <string name="end">End</string>
    <string name="timer_example">00:00:00</string>
    <string name="sleeping">Sleeping...</string>
    <string name="eating">Eating...</string>
    <string name="developer">IVY TRAN</string>
    <string name="unit">KIT305 - Mobile application development</string>
    <string name="welcome_new_parents">Welcome, please provide your baby details</string>
    <string name="error">Oops! Data cannot be saved</string>
    <string name="try_again">Try again</string>
    <string name="loading">Loading...</string>
    <string name="close">Close</string>
    <string name="free">No activity</string>

    <!--Feeding-->
    <string name="total_amount">%.2fML</string>
    <string name="total_feeding_time">Total feeding time:</string>
    <string name="total_amout">Total amount:</string>
    <string name="total_breastfeed">You breastfed %d time(s)</string>
    <string name="total_bottlefeed">You bottlefed %d time(s)</string>
    <string name="milk_amount">%.1fml</string>
    <string name="choose_event">Choose an event to add</string>
    <string name="breastfeeding">Breastfeeding</string>
    <string name="bottlefeeding">Bottlefeeding</string>
    <string name="baby_meal">Baby meals</string>
    <string name="choose_options">Choose an option</string>
    <string name="feeding_list">List of feeding events</string>
    <string name="feeding_summary">Summary of feeding events</string>
    <string name="summary">Summary</string>
    <string name="chart">Charts</string>
    <string name="brf_add">Adding a breastfeeding event</string>
    <string name="f_start_at">The feeding event starts at:</string>
    <string name="brf_last_side">The feed started with:</string>
    <string name="brf_start_side">The feed ended with:</string>
    <string name="brf_choose_side">Choose one side to start</string>
    <string name="note">Note (optional):</string>
    <string name="note_content">Describe the event...</string>
    <string name="brf_last_event_time">The last feeding event was at:</string>
    <string name="duration">Duration:</string>
    <string name="example">example</string>
    <string name="time_stamp">00:00</string>
    <string name="time">00:00:00</string>
    <string name="next">Next</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="left_side">Left side</string>
    <string name="right_side">Right side</string>
    <string name="bottle_add">Feeding milk bottle</string>
    <string name="last_amount">The amount was:</string>
    <string name="enter_amount">Enter the amount (ml):</string>
    <string name="amount_example">0</string>
    <string name="start_recording">Record the feeding time</string>
    <string name="add_meal">Add a baby meal</string>
    <string name="recipe">Recipes</string>
    <string name="adding_meal">Adding a baby meal</string>
    <string name="last_meal_time">The last baby meal was at:</string>
    <string name="ate_what">The baby ate:</string>
    <string name="eating_what">What is the baby eating?</string>
    <string name="choose_recipe">Choose a recipe</string>
    <string name="recipes">Baby meal recipes</string>
    <string name="cate1">All</string>
    <string name="cate2">Porridge</string>
    <string name="cate3">Soup</string>
    <string name="cate4">Dessert</string>
    <string name="add_recipe">Add new recipe</string>
    <string name="enter_recipe_name">Enter a recipe name</string>
    <string name="enter_recipe_des">Enter the recipe description</string>
    <string name="choose_cate">Choose a category</string>
    <string name="search_recipe">What recipe are you looking for?</string>
    <string name="recipe_name_hint">e.g., Pumpkin soup</string>
    <string name="total_duration">Total duration:</string>
    <string name="clear_record">Clear data</string>
    <string name="stop_timer_reminder">Please stop the timer(s)</string>
    <!--Nappy-->
    <string name="total_wet">Total wet nappies:</string>
    <string name="total_poop">Total dry nappies:</string>
    <string name="total_both">Total mixed nappies:</string>
    <string name="total_nappies">Nappies changed %d times</string>
    <string name="add_nappy">Change a nappy</string>
    <string name="nappy_list">List of nappies</string>
    <string name="nappy_summary">Summary of nappies</string>
    <string name="adding_nappy">Changing a nappy</string>
    <string name="nappy_choose_time">The nappy is changed at:</string>
    <string name="nappy_choose_type">Choose a nappy condition</string>
    <string name="nappy_record_image">Upload the nappy image</string>
    <string name="nappy_upload">Upload</string>
    <string name="nappy_remove">Remove</string>
    <string name="pee">Pee</string>
    <string name="poop">Poo</string>
    <string name="mixed">Both</string>
    <string name="current_event">The baby is in another activity, please end it first</string>


    <!--Sleep-->
    <string name="bottleFeeding">BottleFeeding...</string>
    <string name="sleep_duration">The baby slept for %s</string>
    <string name="add_sleep">Add a sleep period</string>
    <string name="sleep_list">List of sleep periods</string>
    <string name="sleep_summary">Summary of sleep periods</string>
    <string name="adding_sleep">Fall asleep</string>
    <string name="start_sleep">The baby fell as sleep at:</string>
    <string name="wake_up">The baby woke up at: (optional)</string>
    <string name="not_yet">Not yet</string>
    <string name="interrupt">The baby is currently in another event</string>
    <string name="update_record">Update record</string>
    <string name="delete">Delete record</string>
    <string name="edit_event">Editing an event</string>
    <string name="question_confirm">Do you want to delete this record?</string>
    <string name="yes">Yes, I do</string>
    <string name="no">Cancel</string>
    <string name="total_sleep_time">The baby has slept %d time(s)</string>
    <string name="total_sleep_duration">The total duration:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterNote">Describe this event</string>
    <string name="amount">Enter an amount</string>
</resources>